# arqmath3-openqa-tools

./: Dockerfile  README.md  launch-docker.sh  setup.cfg
.github/workflows/: main.yml
scripts/: convert_arqmath_task1_to_task3.py  evaluate_task1_results_manual.py  evaluate_task3_results.py  evaluate_task3_results_automatic.py  evaluate_task3_results_automatic.sh  evaluate_task3_results_manual.py  evaluate_task3_results_postevaluation.py  validate_task3_results.py
