[metadata]
name = arqmath3-openqa-tools
description = Tools developed for the ARQMath-3 OpenQA task
long_description = file: README.md
long_description_content_type = 'text/markdown; charset=UTF-8'
url = 'https://github.com/witiko/arqmath3-openqa-tools'
author = Vit Novotny
author_email = witiko@mail.muni.cz
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = 'https://github.com/witiko/arqmath3-openqa-tools'
    Tracker = 'https://github.com/witiko/arqmath3-openqa-tools/issues'

[options]
zip_safe = False
packages = find:
include_package_data = True
requires =
    tqdm
setup_requires =
    setuptools >= 40.6.0
    wheel

[options.extras_require]
convert_task1_to_task3 =
    pv211_utils @ git+https://github.com/MIR-MU/pv211-utils.git@1.1.6#egg=pv211_utils
produce_task3_baseline =
    openai == 0.18.1
    pv211_utils @ git+https://github.com/MIR-MU/pv211-utils.git@1.1.6#egg=pv211_utils
evaluate_task3_results_automatic
    lxml
    beautifulsoup4
    ARQMathCode & git+https://github.com/MIR-MU/ARQMathCode.git#egg=ARQMathCode
test =
    flake8
    pytype
all =
    %(convert_task1_to_task3)s
    %(produce_task3_baseline)s
    %(evaluate_task3_results_automatic)s

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
